<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".HomeActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvwelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/welcome"
        android:textSize="25sp"

        />
     <TextView
        android:id="@+id/tvdatabase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/readdata"
        android:layout_margin="20dp"
        android:textSize="25sp"
        />
    <TextView

        android:id="@+id/showMail"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/mail"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/showId"
        android:layout_width="300dp"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="25sp"
        android:text="@string/unique_id" />





</LinearLayout>