<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">


    <EditText
        android:id="@+id/uid"

        android:layout_marginStart="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="260dp"
        android:hint="@string/uniqueId"
        android:ems="10"
        android:textSize="30sp" />



        />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/uid"
        android:layout_marginStart="90dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/btnSignIn"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/glogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnSignIn"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:text="Continue with Google"
        android:textSize="20sp" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_toRightOf="@id/glogin"
        android:layout_below="@id/btnSignIn"
        android:src="@drawable/gg"/>

    <TextView
        android:id="@+id/hdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="13dp"
        android:text="@string/new_here"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/hdd"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="-70dp"
        android:layout_marginBottom="13dp"
        android:text="@string/signup"
        android:textSize="20sp" />

</RelativeLayout>